Add test infrastructure for the combat estimators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory (BOSS)
 add_subdirectory (SparCraft) 
 add_subdirectory (UAlbertaBot) 
 add_subdirectory (AKBot.Tests) 
+add_subdirectory (AKBot.CombatSimulation) 
