Move tests to Boost.Test This allow working using CMake completely and allow scenario with VSCode development This allow test code on the Linux for example.

--- a/AKBot.CombatSimulation/CMakeLists.txt
+++ b/AKBot.CombatSimulation/CMakeLists.txt
@@ -8,9 +8,9 @@ else()
 	set(BWAPIClient_INCLUDE_DIR "$ENV{BWAPI_DIR}/include/Client")
 endif()
 file(GLOB AKBotTests_SOURCES
-	"../AkBot.Tests/GameHelper.cpp"
-	"../AkBot.Tests/UnitHelper.cpp"
-	"../AkBot.Tests/NullLogger.cpp"
+	"../AkBot.Tests/SupportLib/GameHelper.cpp"
+	"../AkBot.Tests/SupportLib/UnitHelper.cpp"
+	"../AkBot.Tests/SupportLib/NullLogger.cpp"
 	"../AkBot.Tests/TestLib/*.cpp"
 	"../AkBot.Tests/Shared/*.cpp"
 )
