--- a/AkBot.Tests/AkBot.Tests.vcxproj
+++ b/AkBot.Tests/AkBot.Tests.vcxproj
@@ -152,13 +152,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BaseLocationManagerTest.cpp" />
-    <ClCompile Include="BotConfigurationTest.cpp" />
     <ClCompile Include="CommandManagerTest.cpp" />
     <ClCompile Include="ExplorerManagerTest.cpp" />
-    <ClCompile Include="GameHelper.cpp" />
+    <ClCompile Include="SupportLib\GameHelper.cpp" />
     <ClCompile Include="MeleeManagerTest.cpp" />
-    <ClCompile Include="NullLogger.cpp" />
+    <ClCompile Include="SupportLib\NullLogger.cpp" />
     <ClCompile Include="RangedManagerTest.cpp" />
     <ClCompile Include="Shared\BulletShared.cpp" />
     <ClCompile Include="Shared\ForceShared.cpp" />
@@ -173,9 +171,8 @@
     <ClCompile Include="TestLib\PlayerImpl.cpp" />
     <ClCompile Include="TestLib\RegionImpl.cpp" />
     <ClCompile Include="TestLib\UnitImpl.cpp" />
-    <ClCompile Include="UnitHelper.cpp" />
+    <ClCompile Include="SupportLib\UnitHelper.cpp" />
     <ClCompile Include="UnitInfoManagerTest.cpp" />
-    <ClCompile Include="unittest1.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\UAlbertaBot\VisualStudio\AkBot.vcxproj">
@@ -183,9 +180,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameHelper.h" />
-    <ClInclude Include="NullLogger.h" />
-    <ClInclude Include="PlainOpponentView.h" />
+    <ClInclude Include="SupportLib\GameHelper.h" />
+    <ClInclude Include="SupportLib\NullLogger.h" />
+    <ClInclude Include="SupportLib\PlainOpponentView.h" />
     <ClInclude Include="Shared\Templates.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -196,7 +193,7 @@
     <ClInclude Include="TestLib\PlayerImpl.h" />
     <ClInclude Include="TestLib\RegionImpl.h" />
     <ClInclude Include="TestLib\UnitImpl.h" />
-    <ClInclude Include="UnitHelper.h" />
+    <ClInclude Include="SupportLib\UnitHelper.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AK_Config.json" />
