--- a/SparCraft/CMakeLists.txt
+++ b/SparCraft/CMakeLists.txt
@@ -3,11 +3,11 @@ file(GLOB_RECURSE SparCraft_HEADERS "source/*.h")
 file(GLOB_RECURSE SparCraft_Lib "lib/*.lib")
 
 if (AKBOT_SSCAIT)
-	set(BWAPI_LIB_DIR "$ENV{BWAPI_SSCAIT_DIR}/lib")
-	set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_SSCAIT_DIR}/include")
+	set(BWAPI_LIB_DIR "${BWAPI_SSCAIT_DIR}/lib")
+	set(BWAPI_INCLUDE_DIR "${BWAPI_SSCAIT_DIR}/include")
 else()
-	set(BWAPI_LIB_DIR "$ENV{BWAPI_DIR}/lib")
-	set(BWAPI_INCLUDE_DIR "$ENV{BWAPI_DIR}/include")
+	set(BWAPI_LIB_DIR "${BWAPI_DIR}/lib")
+	set(BWAPI_INCLUDE_DIR "${BWAPI_DIR}/include")
 endif()
 
 include_directories(
@@ -44,7 +44,7 @@ find_package(sdl2 REQUIRED)
 target_link_libraries(SparCraft_main PRIVATE SDL2::SDL2 SDL2::SDL2main SparCraft SDL2_image opengl32)
 
 add_dependencies(SparCraft_main SparCraft)
-message(STATUS "Link dir" ${BWAPI_LIB_DIR})
+message(STATUS "Link dir\n" ${BWAPI_LIB_DIR})
 target_link_libraries(SparCraft_main PUBLIC SparCraft)
 
 IF(CMAKE_BUILD_TYPE MATCHES Release)
