--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\Source\Common.cpp">
-      <Filter>common</Filter>
-    </ClCompile>
     <ClCompile Include="..\Source\DebugTools.cpp">
       <Filter>common</Filter>
     </ClCompile>
@@ -172,9 +169,6 @@
     <ClCompile Include="..\Source\debug\GameDebug.cpp">
       <Filter>debug</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\BotConfiguration.cpp">
-      <Filter>common</Filter>
-    </ClCompile>
     <ClCompile Include="..\Source\commands\CommandManager.cpp">
       <Filter>commands</Filter>
     </ClCompile>
@@ -265,6 +259,8 @@
     <ClCompile Include="..\Source\simulation\FAPCombatEstimator.cpp">
       <Filter>micro\simulation</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\bwapihudinfo.cpp" />
+    <ClCompile Include="..\Source\BWAPIUnitInformation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -622,5 +618,9 @@
     <ClInclude Include="..\Source\simulation\FAP.h">
       <Filter>micro\simulation</Filter>
     </ClInclude>
+    <ClInclude Include="..\Source\BWAPIHUDInfo.h" />
+    <ClInclude Include="..\Source\BWAPIUnitInformation.h" />
+    <ClInclude Include="..\Source\hudinfo.h" />
+    <ClInclude Include="..\Source\UnitInformation.h" />
   </ItemGroup>
 </Project>
