--- a/BOSS/CMakeLists.txt
+++ b/BOSS/CMakeLists.txt
@@ -91,9 +91,9 @@ add_executable(BOSS_main
 )
 add_dependencies(BOSS_main BOSS)
 target_link_libraries(BOSS_main PUBLIC BOSS)
-IF(CMAKE_BUILD_TYPE MATCHES Release)
-	target_link_libraries(BOSS_main PUBLIC BWAPI.lib)
-ELSE()
+IF(CMAKE_CONFIGURATION_TYPES MATCHES Debug)
 	message("Adding debug BWAPI libraries")
 	target_link_libraries(BOSS_main PUBLIC BWAPId.lib)
+ELSE()
+	target_link_libraries(BOSS_main PUBLIC BWAPI.lib)
 ENDIF()
