--- a/SparCraft/CMakeLists.txt
+++ b/SparCraft/CMakeLists.txt
@@ -47,11 +47,11 @@ add_dependencies(SparCraft_main SparCraft)
 message(STATUS "Link dir\n" ${BWAPI_LIB_DIR})
 target_link_libraries(SparCraft_main PUBLIC SparCraft)
 
-IF(CMAKE_BUILD_TYPE MATCHES Release)
-	target_link_libraries(SparCraft_main PUBLIC BWAPI.lib)
-ELSE()
+IF(CMAKE_CONFIGURATION_TYPES MATCHES Debug)
 	message("Adding debug BWAPI libraries to SparCraft")
 	target_link_libraries(SparCraft_main PUBLIC BWAPId.lib)
+ELSE()
+	target_link_libraries(SparCraft_main PUBLIC BWAPI.lib)
 ENDIF()
 	
 #target_link_libraries(SparCraft_main PUBLIC SDL2 SDL2_image opengl32)
